--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "xml-parser": "^1.2.1",
     "xml-reader": "^2.4.3",
     "xml-url-parser": "^0.1.1",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "cron": "3.1.6",
+    "js-sha256" : "0.10.1"
   },
   "devDependencies": {
     "webpack": "^5.74.0",
